@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.4.1" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.0" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
-		<import addon="script.module.tulip" version="1.3.5" />
+		<import addon="script.module.tulip" version="2.2.4" />
+		<import addon="script.module.kodi-six" version="0.0.2"/>
 	</requires>
 	<extension point="xbmc.subtitle.module" library="service.py">
 	</extension>
 	<extension point="xbmc.addon.metadata">
+		<reuselanguageinvoker>false</reuselanguageinvoker>
 		<summary lang="en_GB">Subtitles.gr addon for subtitles</summary>
 		<summary lang="en_GB">Πρόσθετο υποτίτλων Subtitles.gr</summary>
         <description lang="en_GB">Search and download subtitles from subtitles.gr, xsubs.tv and subz.xyz</description>
@@ -18,8 +20,14 @@
 		<platform>all</platform>
 		<language>el</language>
 		<news>
-[B]1.4.1[/B]
+[B]1.5.0[/B]
 - Fixed subz.xyz
+- Subtitles search can also be performed via listitem query (useful when searching via context menu)
+- Tweaked string formatting on all modules
+- Utilize kodi_six (except xbmcvfs module, which caused issues on opening rar archives)
+- Added Python 3 compatibility (not yet tested)
+- Implemented capability to select subtitle from rar archives that have multiple subtitles (up to second subdirectory level)
+- Bump dependencies
 		</news>
 	</extension>
 </addon>
