@@ -17,15 +17,3 @@
         You should have received a copy of the GNU General Public License
         along with this program.  If not, see <http://www.gnu.org/licenses/>.
 '''
-
-import sys, urlparse
-
-syshandle = int(sys.argv[1])
-sysaddon = sys.argv[0]
-params = dict(urlparse.parse_qsl(sys.argv[2].replace('?','')))
-
-action = params.get('action')
-source = params.get('source')
-url = params.get('url')
-query = params.get('searchstring')
-langs = params.get('languages')
