@@ -17,3 +17,16 @@
         You should have received a copy of the GNU General Public License
         along with this program.  If not, see <http://www.gnu.org/licenses/>.
 '''
+
+import sys
+from tulip.compat import parse_qsl
+
+syshandle = int(sys.argv[1])
+sysaddon = sys.argv[0]
+params = dict(parse_qsl(sys.argv[2].replace('?','')))
+
+action = params.get('action')
+source = params.get('source')
+url = params.get('url')
+query = params.get('searchstring')
+langs = params.get('languages')
