@@ -15,13 +15,18 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 '''
 
-import urllib, re, os
-from urlparse import urljoin
+from xbmcvfs import File as openFile
+from random import choice
+import re, shutil
+from os.path import split
+from tulip.compat import urljoin, quote_plus, unquote_plus, quote
 from tulip import cache, cleantitle, client, control
 
 
 class subzxyz:
+
     def __init__(self):
+
         self.list = []
 
     def get(self, query):
@@ -32,9 +37,9 @@ class subzxyz:
 
                 title, year = match[0][0], match[0][1]
 
-                query = ' '.join(urllib.unquote_plus(re.sub('%\w\w', ' ', urllib.quote_plus(title))).split())
+                query = ' '.join(unquote_plus(re.sub('%\w\w', ' ', quote_plus(title))).split())
 
-                url = 'https://subz.xyz/search?q=%s' % urllib.quote_plus(query)
+                url = 'https://subz.xyz/search?q={0}'.format(quote_plus(query))
 
                 result = client.request(url)
                 result = re.sub(r'[^\x00-\x7F]+', ' ', result)
@@ -46,6 +51,7 @@ class subzxyz:
                 url = url[:3]
 
                 for i in url:
+
                     c = cache.get(self.cache, 2200, i)
 
                     if c is not None:
@@ -56,16 +62,15 @@ class subzxyz:
                                 item = client.request(i)
                             break
 
-
             else:
 
                 title, season, episode = re.findall('(.+?) S(\d+)E(\d+)$', query)[0]
 
-                season, episode = '%01d' % int(season), '%01d' % int(episode)
+                season, episode = '{0}'.format(season), '{0}'.format(episode)
 
-                query = ' '.join(urllib.unquote_plus(re.sub('%\w\w', ' ', urllib.quote_plus(title))).split())
+                query = ' '.join(unquote_plus(re.sub('%\w\w', ' ', quote_plus(title))).split())
 
-                url = 'https://subz.xyz/search?q=%s' % urllib.quote_plus(query)
+                url = 'https://subz.xyz/search?q={0}'.format(quote_plus(query))
 
                 result = client.request(url)
                 result = re.sub(r'[^\x00-\x7F]+', ' ', result)
@@ -84,7 +89,7 @@ class subzxyz:
                             item = i
                             break
 
-                item = '%s/seasons/%s/episodes/%s' % (item, season, episode)
+                item = '{0}/seasons/{1}/episodes/{2}'.format(item, season, episode)
                 item = client.request(item)
 
             item = re.sub(r'[^\x00-\x7F]+', ' ', item)
@@ -99,11 +104,11 @@ class subzxyz:
 
                 url = client.parseDOM(r, 'a', ret='href')[0]
                 url = client.replaceHTMLCodes(url)
-                url = url.replace("'","").encode('utf-8')
-                
+                url = url.replace("'", "").encode('utf-8')
+
                 name = url.split('/')[-1].strip()
                 name = re.sub('\s\s+', ' ', name)
-                name = name.replace('_','').replace('%20','.')
+                name = name.replace('_', '').replace('%20', '.')
                 name = client.replaceHTMLCodes(name)
                 name = name.encode('utf-8')
 
@@ -131,7 +136,7 @@ class subzxyz:
             result = client.request(url)
 
             # f = os.path.splitext(urlparse.urlparse(url).path)[1][1:]
-            f = os.path.join(path, url.rpartition('/')[2])
+            f = control.join(path, url.rpartition('/')[2])
 
             with open(f, 'wb') as subFile:
                 subFile.write(result)
@@ -142,49 +147,95 @@ class subzxyz:
                 return
 
             if not f.lower().endswith('.rar'):
-                control.execute('Extract("%s","%s")' % (f, path))
-
-            if control.infoLabel('System.Platform.Windows'):
-                conversion = urllib.quote
-            else:
-                conversion = urllib.quote_plus
+                control.execute('Extract("{0}","{0}")'.format(f, path))
 
             if f.lower().endswith('.rar'):
 
-                uri = "rar://{0}/".format(conversion(f))
+                if control.infoLabel('System.Platform.Windows'):
+                    uri = "rar://{0}/".format(quote(f))
+                else:
+                    uri = "rar://{0}/".format(quote_plus(f))
+
                 dirs, files = control.listDir(uri)
 
             else:
 
-                for i in range(0, 10):
+                dirs, files = control.listDir(path)
 
-                    try:
-                        dirs, files = control.listDir(path)
-                        if len(files) > 1:
-                            break
-                        if control.aborted is True:
-                            break
-                        control.wait(1)
-                    except:
-                        pass
+            if dirs:
 
-            filename = [i for i in files if any(i.endswith(x) for x in ['.srt', '.sub'])][0].decode('utf-8')
-            subtitle = os.path.join(path, filename)
+                for dir in dirs:
+
+                    _dirs, _files = control.listDir(control.join(uri if f.lower().endswith('.rar') else path, dir))
+
+                    [files.append(control.join(dir, i)) for i in _files]
+
+                    if _dirs:
+
+                        for _dir in _dirs:
+
+                            _dir += dir
+
+                            __dirs, __files = control.listDir(control.join(uri if f.lower().endswith('.rar') else path, _dir))
+
+                            [files.append(control.join(dir, i)) for i in __files]
+
+            filenames = [i for i in files if i.endswith(('.srt', '.sub'))]
+
+            if len(filenames) == 1:
+
+                filename = filenames[0]
+
+            else:
+
+                choices = [split(i)[1] for i in filenames]
+
+                choices.insert(0, control.lang(32215))
+
+                _choice = control.selectDialog(heading=control.lang(32214), list=choices)
+
+                if _choice == 0:
+                    filename = choice(filenames)
+                elif _choice <= len(filenames) + 1:
+                    filename = filenames[_choice - 1]
+                else:
+                    filename = choice(filenames)
+
+            try:
+
+                filename = filename.decode('utf-8')
+
+            except Exception:
+
+                pass
+
+            if not control.exists(control.join(path, split(filename)[0])):
+                control.makeFiles(control.join(path, split(filename)[0]))
+
+            subtitle = control.join(path, filename)
 
             if f.lower().endswith('.rar'):
 
-                content = control.openFile(uri + filename).read()
+                content = openFile(uri + filename).read()
 
                 with open(subtitle, 'wb') as subFile:
                     subFile.write(content)
 
-                control.deleteFile(f)
+                output = control.transPath(control.join('special://temp', split(filename)[1]))
 
-                return subtitle
+                shutil.move(subtitle, output)
+
+                shutil.rmtree(control.join(control.dataPath, 'temp'))
+
+                return output
 
             else:
 
-                control.deleteFile(f)
+                output = control.transPath(control.join('special://temp', filename))
+
+                shutil.move(subtitle, output)
+
+                shutil.rmtree(control.join(control.dataPath, 'temp'))
 
                 return subtitle
 
